Fixed some warnings to improve usability.